selezione giorno e lista ore disponibili

--- a/progetto/campo/prenotazioni/templates/prenotazioni/crea_prenotazione.html
+++ b/progetto/campo/prenotazioni/templates/prenotazioni/crea_prenotazione.html
@@ -1,5 +1,5 @@
 {% block content %}
-    <h1>Crea prenotazione</h1>
+    <h1>Crea prenotazione per il {{day}}</h1>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
