fix prenotazioni, chat e css

--- a/progetto/campo/messaggi/templates/messaggi/chat_admin.html
+++ b/progetto/campo/messaggi/templates/messaggi/chat_admin.html
@@ -1,3 +1,9 @@
+{% extends 'base.html' %}
+
+{% block content %}
+
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -40,9 +46,16 @@
             if(data.type === 'chat'){
                 let messages = document.getElementById('messages')
 
+                var date = new Date;
+                date.setTime(Date.now());
+    
+                var minutes = date.getMinutes();
+                var hour = date.getHours();
+    
                 messages.insertAdjacentHTML('beforeend', `<div>
-                                        <p>${data.message}</p>
-                                    </div>`)
+                    <p>(${hour}:${minutes})  ${data.message}</p>
+                    <hr>
+                </div>`)
             }
         }
 
@@ -52,7 +65,7 @@
             e.preventDefault()
             let message = e.target.message.value 
             chatSocket.send(JSON.stringify({
-                'message':message
+                'message': "Servizio clienti: " + message
             }))
             form.reset()
         })
@@ -60,3 +73,6 @@
     </script>
 </body>
 </html>
+
+
+{% endblock %}
