--- a/progetto/campo/messaggi/templates/messaggi/lista_chat.html
+++ b/progetto/campo/messaggi/templates/messaggi/lista_chat.html
@@ -1,3 +1,8 @@
+{% extends 'base.html' %}
+
+{% block content %}
+
+<h1> Chat in attesa di risposta:</h1>
 <table>
     <thead>
         <tr>
@@ -18,3 +23,5 @@
         {% endfor %}
     </tbody>
 </table>
+
+{% endblock %}
