--- a/progetto/campo/prenotazioni/templates/prenotazioni/giorno.html
+++ b/progetto/campo/prenotazioni/templates/prenotazioni/giorno.html
@@ -1,6 +1,13 @@
+{% extends 'base.html' %}
+
+{% block content %}
+
+
 <h1>Scegli l'ora per il giorno {{ day }}</h1>
 <ul>
     {% for hour in lista_ore %}
     <li><a href="{% url 'prenota' hour|date:'Y-m-d H:i:s' %}">{{ hour|date:"H:i" }}</a></li>
     {% endfor %}
 </ul>
+
+{% endblock %}
