--- a/progetto/campo/utenti/templates/gestione.html
+++ b/progetto/campo/utenti/templates/gestione.html
@@ -1,3 +1,9 @@
+{% extends 'base.html' %}
+
+{% block content %}
+
+
+<h1>Gestione utenti</h1>
 <table>
     <thead>
         <tr>
@@ -31,3 +37,5 @@
         {% endfor %}
     </tbody>
 </table>
+
+{% endblock %}
