--- a/progetto/campo/utenti/templates/profile.html
+++ b/progetto/campo/utenti/templates/profile.html
@@ -1,13 +1,16 @@
+{% extends 'base.html' %}
+
+{% block content %}
+
 <h2>Profilo utente</h2>
 <p>Nome: {{ user }} </p>
-<p>Gruppi:
+<p>Utente di tipo:
     <ul>
         {% for group in user.groups.all %}
             <li>{{ group.name }}</li>
         {% endfor %}
     </ul>
 </p>
-{% block content %}
     <h1>I tuoi Paglioni prenotati</h1>
     {% if prenotazioni %}
         <ul>
@@ -55,12 +58,3 @@
     
 {% endblock %}
 
-<script>
-    //var socket = new WebSocket('ws://localhost:8000/ws/some_url/');
-
-    //socket.onmessage = function(event){
-    //    var data = JSON.parse(event.data);
-    //    console.log(data);
-    //    document.querySelector('#app').innerText = data.message;
-    //}
-</script>
