--- a/progetto/campo/bacheca/templates/bacheca/post_form.html
+++ b/progetto/campo/bacheca/templates/bacheca/post_form.html
@@ -1,6 +1,13 @@
+{% extends 'base.html' %}
+
+{% block content %}
+
+
 <h1>Crea un post</h1>
 <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
   {{ form.as_p }}
   <button type="submit">Crea nuovo post</button>
 </form>
+
+{% endblock %}
