--- a/progetto/campo/bacheca/templates/bacheca/post_list.html
+++ b/progetto/campo/bacheca/templates/bacheca/post_list.html
@@ -1,4 +1,14 @@
+{% extends 'base.html' %}
+
+{% block content %}
+
+
+
 <h1>Bacheca:</h1>
+<form action="{% url 'crea_post'  %}" method="post">
+  {% csrf_token %}
+  <input type="submit" value="Pubblica un post✍">
+</form>
 <ul>
   {% for post in object_list %}
     <li>
@@ -11,3 +21,5 @@
     </li>
   {% endfor %}
 </ul>
+
+{% endblock %}
