--- a/progetto/campo/messaggi/templates/messaggi/lobby.html
+++ b/progetto/campo/messaggi/templates/messaggi/lobby.html
@@ -1,3 +1,8 @@
+{% extends 'base.html' %}
+
+{% block content %}
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -44,10 +49,17 @@
             console.log('Data:', data)
             if(data.type === 'chat'){
                 let messages = document.getElementById('messages')
+                
+            var date = new Date;
+            date.setTime(Date.now());
 
-                messages.insertAdjacentHTML('beforeend', `<div>
-                                        <p>${data.message}</p>
-                                    </div>`)
+            var minutes = date.getMinutes();
+            var hour = date.getHours();
+
+            messages.insertAdjacentHTML('beforeend', `<div>
+                <p>(${hour}:${minutes})  ${data.message}</p>
+                <hr>
+            </div>`)
             }
         }
 
@@ -57,7 +69,7 @@
             e.preventDefault()
             let message = e.target.message.value 
             chatSocket.send(JSON.stringify({
-                'message':message
+                'message':"Utente anonimo: " + message
             }))
             form.reset()
         })
@@ -65,3 +77,6 @@
     </script>
 </body>
 </html>
+
+
+{% endblock %}
