--- a/progetto/campo/templates/registration/logged_out.html
+++ b/progetto/campo/templates/registration/logged_out.html
@@ -1,15 +1,11 @@
+{% extends 'base.html' %}
 
-{% block title %} Logout {% endblock %} 
-
-{% block header1 %}
-  <h1>Pagina di Logout</h1>
-{% endblock %}
 
 {% block content %} 
+
 
 <h2>Logout eseguito con successo</h2>
 <h5>Ci vediamo presto!</h5>
 
-{% endblock %}
 
-{% block footer %} {% endblock %}
+{% endblock %}
