--- a/progetto/campo/bacheca/templates/bacheca/post_list.html
+++ b/progetto/campo/bacheca/templates/bacheca/post_list.html
@@ -9,17 +9,20 @@
   {% csrf_token %}
   <input type="submit" value="Pubblica un post✍">
 </form>
-<ul>
+<ul style="list-style: none; margin: 0; padding: 0;">
   {% for post in object_list %}
     <li>
-    <h3> {{post.ora_creazione }} </h3>  
-    <h2>{{ post.autore }} </h2>
-    <p> {{ post.messaggio }}</p>
-    {% if post.immagine %}
-    <img src="{{ post.immagine.url}}" width=auto height="250">
-    {% endif %}
+      <div class="post">
+        <h4>{{ post.autore }} </h4>
+        <p> Ora pubblicazione: {{post.ora_creazione }} </p>
+        <h3>{{ post.messaggio }} </h3>  
+        {% if post.immagine %}
+        <img src="{{ post.immagine.url}}" width=auto height="250">
+        {% endif %}
+      </div>
     </li>
   {% endfor %}
 </ul>
 
 {% endblock %}
+
